test/types/range/stonea/countedRangeBy-2.good
countedRangeBy-2.chpl:1: error: unresolved call 'by(4, 2)'
